fix(pages): moved no-overflow class and applied to all overlays

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -4,3 +4,7 @@
   text-decoration: none;
   color: lightseagreen !important;
 }
+
+.no-overflow {
+  overflow: hidden !important;
+}
